--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -8,7 +8,7 @@
                     <h2>From Industry Insights to Personal Growth</h2>
                 </div>
                 <div class="service-text">
-                    <p>
+                    <p class="p-text">
                         Our Shopify design service offers a comprehensive solution for businesses looking to create a visually appealing and user-friendly online store. Our team of experienced designers and developers work closely with clients to understand their brand and target audience, resulting in a customized storefront that reflects their unique style and values. 
                     </p>
                 </div>
