--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -6,7 +6,7 @@
                 <h2 class="second-heading">Get in touch, and we'll help you grow.</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     At our esteemed organization, we are committed to delivering exceptional project solutions that cater to your unique requirements. If you're seeking a reliable partner to bring your ideas to life, look no further. Our team of experts is well-versed in various domains and possesses the necessary skills and resources to ensure project success. Reach out to us today and let's collaborate on your next project!
                 </p>
             </div>
