--- a/src/app/data-migration/data-migration.component.html
+++ b/src/app/data-migration/data-migration.component.html
@@ -25,7 +25,7 @@
                 <h2>Expert Data Migration Services</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     In our Shopify Data Migration service, we seamlessly transfer your existing data to Shopify,
                     ensuring a smooth transition. Our process includes meticulous planning, data mapping, and execution
                     to preserve data integrity, providing a hassle-free experience and allowing you to leverage
@@ -79,7 +79,7 @@
                 <h2>Effortless Data Transition</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     Effortless Data Transition encapsulates our commitment to streamlining and simplifying the migration process. We prioritize a user-friendly approach, ensuring a smooth transfer of data from source to destination with minimal disruption. Our method involves meticulous planning,
                 </p>
             </div>
