--- a/src/app/headless/headless.component.html
+++ b/src/app/headless/headless.component.html
@@ -21,7 +21,7 @@
                 <h2>Future-Ready E-Commerce</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     Headless Commerce separates the front-end and back-end for greater flexibility, while Composable Commerce extends this flexibility by allowing businesses to compose their e-commerce systems from modular, best-in-class components. Both approaches empower businesses to adapt quickly to changing market trends.
                 </p>
             </div>
@@ -57,7 +57,7 @@
                 <h2>Tailored for Flexibility</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     Discover our forward-thinking approach to commerce with a focus on Headless and Composable solutions. We prioritize modular flexibility, allowing businesses to curate a personalized e-commerce ecosystem.
                 </p>
             </div>
