--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -93,64 +93,184 @@
             <div class="marquee">
               <div class="marquee__group">
                     <div class="svg-wrap-group">
-                      <img src="../../assets/image/bahari-logo-svg.svg" alt="">
+                        <img src="../../assets/image/mq-slider/bahari-slider.svg" alt="">
                     </div>
                     <div class="svg-wrap-group">
-                        <img src="../../assets/image/mhc-logo-svg.svg" alt="">
+                        <img src="../../assets/image/mq-slider/mhc-slider.svg" alt="">
                     </div>
                     <div class="svg-wrap-group">
-                        <img src="../../assets/image/grips-logo-svg.svg" alt="">
+                        <img src="../../assets/image/mq-slider/Gripps-slider.svg" alt="">
                     </div>
                     <div class="svg-wrap-group">
-                        <img src="../../assets/image/mersi-logo-svg.svg" alt="">
+                        <img src="../../assets/image/mq-slider/mersi-slider.svg" alt="">
+                    </div>
+                    <div class="svg-wrap-group">
+                        <img src="../../assets/image/mq-slider/anansi--slider.svg" alt="">
+                    </div>
+                    <div class="svg-wrap-group">
+                        <img src="../../assets/image/mq-slider/eq-slider.svg" alt="">
+                    </div>
+                    <div class="svg-wrap-group">
+                        <img src="../../assets/image/mq-slider/kavala-slider.svg" alt="">
+                    </div>
+                    <div class="svg-wrap-group">
+                        <img src="../../assets/image/mq-slider/logo-protech-slider.svg" alt="">
+                    </div>
+                    <div class="svg-wrap-group">
+                        <img src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
+                    </div>
+                    <div class="svg-wrap-group">
+                        <img src="../../assets/image/mq-slider/North-Star-Coffee-slider.svg" alt="">
+                    </div>
+                    <div class="svg-wrap-group">
+                        <img src="../../assets/image/mq-slider/Roberto-slider.svg" alt="">
+                    </div>
+                    <div class="svg-wrap-group">
+                        <img src="../../assets/image/mq-slider/sneakercentral-slider.svg" alt="">
+                    </div>
+                    <div class="svg-wrap-group">
+                        <img src="../../assets/image/mq-slider/Tanaor-slider.svg" alt="">
+                    </div>
+                    <div class="svg-wrap-group">
+                        <img src="../../assets/image/mq-slider/teleflick-slider.svg" alt="">
                     </div>
               </div>
           
               <div aria-hidden="true" class="marquee__group">
-                    <div class="svg-wrap-group">
-                        <img src="../../assets/image/bahari-logo-svg.svg" alt="">
-                    </div>
-                    <div class="svg-wrap-group">
-                        <img src="../../assets/image/mhc-logo-svg.svg" alt="">
-                    </div>
-                    <div class="svg-wrap-group">
-                        <img src="../../assets/image/grips-logo-svg.svg" alt="">
-                    </div>
-                    <div class="svg-wrap-group">
-                        <img src="../../assets/image/mersi-logo-svg.svg" alt="">
-                    </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/bahari-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/mhc-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/Gripps-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/mersi-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/anansi--slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/eq-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/kavala-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/logo-protech-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/North-Star-Coffee-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/Roberto-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/sneakercentral-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/Tanaor-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/teleflick-slider.svg" alt="">
+                </div>
               </div>
             </div>
           
             <div class="marquee marquee--reverse">
               <div class="marquee__group">
-                    <div class="svg-wrap-group">
-                        <img src="../../assets/image/mersi-logo-svg.svg" alt="">
-                    </div>
-                    <div class="svg-wrap-group">
-                        <img src="../../assets/image/luxandnyx-logo-svg.svg" alt="">
-                    </div>
-                    <div class="svg-wrap-group">
-                        <img src="../../assets/image/egyptain-logo-svg.svg" alt="">
-                    </div>
-                    <div class="svg-wrap-group">
-                        <img src="../../assets/image/logo-protech-svg.svg" alt="">
-                    </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/teleflick-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/Tanaor-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/sneakercentral-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/Roberto-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/North-Star-Coffee-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/logo-protech-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/kavala-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/eq-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/anansi--slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/mersi-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/Gripps-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/mhc-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/bahari-slider.svg" alt="">
+                </div>
               </div>
           
               <div aria-hidden="true" class="marquee__group">
-                    <div class="svg-wrap-group">
-                        <img src="../../assets/image/mersi-logo-svg.svg" alt="">
-                    </div>
-                    <div class="svg-wrap-group">
-                        <img src="../../assets/image/luxandnyx-logo-svg.svg" alt="">
-                    </div>
-                    <div class="svg-wrap-group">
-                        <img src="../../assets/image/egyptain-logo-svg.svg" alt="">
-                    </div>
-                    <div class="svg-wrap-group">
-                        <img src="../../assets/image/logo-protech-svg.svg" alt="">
-                    </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/teleflick-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/Tanaor-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/sneakercentral-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/Roberto-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/North-Star-Coffee-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/luxandnyx-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/logo-protech-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/kavala-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/eq-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/anansi--slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/mersi-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/Gripps-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/mhc-slider.svg" alt="">
+                </div>
+                <div class="svg-wrap-group">
+                    <img src="../../assets/image/mq-slider/bahari-slider.svg" alt="">
+                </div>
               </div>
             </div>
         </article>
@@ -166,7 +286,7 @@
                     <h2>We provide the necessary services to you</h2>
                 </div>
                 <div class="service-text">
-                    <p>
+                    <p class="p-text">
                         Our Shopify design service offers a comprehensive solution for businesses looking to create a visually appealing and user-friendly online store. Our team of experienced designers and developers work closely with clients to understand their brand and target audience, resulting in a customized storefront that reflects their unique style and values.
                     </p>
                 </div>
@@ -272,7 +392,7 @@
                     <h2>What we've been really goingafter...</h2>
                 </div>
                 <div class="service-text">
-                    <p>
+                    <p class="p-text">
                         Our Shopify design service offers a comprehensive solution for businesses looking to create a visually appealing and user-friendly online store. Our team of experienced designers and developers work closely with clients to understand their brand and target audience, resulting in a customized storefront that reflects their unique style and values. 
                     </p>
                 </div>
@@ -436,7 +556,7 @@
                     <h2>From Industry Insights to Personal Growth</h2>
                 </div>
                 <div class="service-text">
-                    <p>
+                    <p class="p-text">
                         Our Shopify design service offers a comprehensive solution for businesses looking to create a visually appealing and user-friendly online store. Our team of experienced designers and developers work closely with clients to understand their brand and target audience, resulting in a customized storefront that reflects their unique style and values. 
                     </p>
                 </div>
