--- a/src/app/internationalization/internationalization.component.html
+++ b/src/app/internationalization/internationalization.component.html
@@ -21,7 +21,7 @@
                 <h2>Globalize Your Shopify Store for Success</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     Transform your Shopify store into a global powerhouse with our internationalization expertise. From multilingual capabilities to strategic currency adaptations, we tailor your platform for international success. Expand your reach, engage diverse audiences, and boost conversions across borders. Elevate your Shopify presence and thrive in the global e-commerce landscape.
                 </p>
             </div>
@@ -57,7 +57,7 @@
                 <h2>Crafting Global Success</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     Our Internationalization Service Approach revolves around seamlessly integrating multilingual capabilities and currency adaptability, ensuring a tailored and engaging experience for a global audience.
                 </p>
             </div>
