--- a/src/app/our-team/our-team.component.html
+++ b/src/app/our-team/our-team.component.html
@@ -33,7 +33,7 @@
                     <h2>Meet our skilled team</h2>
                 </div>
                 <div class="service-text">
-                    <p>
+                    <p class="p-text">
                         At Codesdesk Technology, we pride ourselves on having a talented and experienced team of developers, designers, and project managers. Our experts possess a deep understanding of various programming languages, frameworks, and technologies, allowing us to deliver high-quality software solutions that meet our clients' unique requirements.
                     </p>
                 </div>
