--- a/src/app/service-details/service-details.component.html
+++ b/src/app/service-details/service-details.component.html
@@ -21,7 +21,7 @@
                 <h2>Transform your store with our shopify design service</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     We create exceptional user experiences beyond the conventional – crafting websites that not only captivate your audience but also tell your brand's unique narrative. From the first touchpoint to conversion and post-purchase, every interaction is designed to foster a loyal customer base while achieving your commercial goals.
                 </p>
             </div>
@@ -72,7 +72,7 @@
                 <h2>How we approach design</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     Whether it’s a complete redesign of your store or ongoing collaboration to build on your existing success, our team is focused on understanding your unique design challenges and providing innovative and effective solutions.
                 </p>
             </div>
