--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -21,7 +21,7 @@
                     <h2>We provide the necessary services to you</h2>
                 </div>
                 <div class="service-text">
-                    <p>
+                    <p class="p-text">
                         Our Shopify design service offers a comprehensive solution for businesses looking to create a visually appealing and user-friendly online store. Our team of experienced designers and developers work closely with clients to understand their brand and target audience, resulting in a customized storefront that reflects their unique style and values.
                     </p>
                 </div>
@@ -162,7 +162,7 @@
                 <h2>Making your journey, our journey</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     Our team of experienced Shopify experts provides comprehensive support for both migration and ongoing optimization services. Whether you're transitioning your store to Shopify or looking to enhance its performance, we're here to guide you through every step of the process. Our services include everything from store setup and design to app integration, SEO optimization, and marketing strategies. Trust us to help you maximize the potential of your Shopify store.
                 </p>
             </div>
