--- a/src/app/shopify-app-development/shopify-app-development.component.html
+++ b/src/app/shopify-app-development/shopify-app-development.component.html
@@ -21,7 +21,7 @@
                 <h2>Bespoke Solutions for Shopify</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     Custom Shopify App Development involves crafting personalized applications tailored to specific business needs. Our approach begins with a detailed analysis of your requirements, followed by the design and implementation of unique features that seamlessly integrate with the Shopify platform. We prioritize a user-centric approach, ensuring an intuitive user experience.
                 </p>
             </div>
@@ -72,7 +72,7 @@
                 <h2>Tailored Excellence</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     Our approach to Custom Shopify App Development centers on a meticulous process of understanding your specific business needs, designing tailored solutions, and seamlessly integrating them into the Shopify ecosystem.
                 </p>
             </div>
