--- a/src/app/shopify-web-development/shopify-web-development.component.html
+++ b/src/app/shopify-web-development/shopify-web-development.component.html
@@ -21,7 +21,7 @@
                 <h2>Elevate your business with Shopify Mastery.</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     Elevate Your Business with Shopify Mastery" signifies our dedication to optimizing your online success. Our Shopify web development service tailors advanced solutions, blending intuitive design and robust functionality to create a compelling e-commerce platform. Trust us to enhance your brand's digital presence, driving growth and customer engagement.
                 </p>
             </div>
@@ -78,7 +78,7 @@
                 <h2>How we approach website development</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     In our Shopify development approach, we conduct a thorough analysis of your business goals and target audience, shaping a tailored strategy. Leveraging Shopify's robust features, we implement a user-friendly and scalable e-commerce solution, ensuring your online store not only meets but exceeds your expectations in the dynamic digital landscape
                 </p>
             </div>
