--- a/src/app/strategy/strategy.component.html
+++ b/src/app/strategy/strategy.component.html
@@ -21,7 +21,7 @@
                 <h2>Maximizing conversions, Elevating experiences.</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     This phrase encapsulates a commitment to the dual objectives of maximizing conversions and elevating user experiences. It signifies a strategic approach that not only focuses on driving more conversions but also emphasizes creating positive and engaging interactions for users, resulting in an overall enhanced online experience.
                 </p>
             </div>
@@ -63,7 +63,7 @@
                 <h2>How we approach CRO</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     In approaching CRO, we meticulously analyze user interactions and leverage data insights to strategically refine website elements, ensuring optimal user experiences and maximizing conversion rates for sustained online success.
                 </p>
             </div>
