--- a/src/app/career/career.component.html
+++ b/src/app/career/career.component.html
@@ -6,7 +6,7 @@
                 <h1 class="second-heading">Build a future with limitless possibilites</h1>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     We also recognise the importance of a healthy work-life balance and support our employees in their endeavours. We offer excellent facilities with innovative office buildings. These are some of the advantages you will enjoy when choosing us:
                 </p>
             </div>
