--- a/src/app/northstarcoffee/northstarcoffee.component.html
+++ b/src/app/northstarcoffee/northstarcoffee.component.html
@@ -25,7 +25,7 @@
                 <h3 class="green-text">Shopify Plus Replatform</h3>
             </div>
             <div class="service-text">
-                <p class="primery-text">
+                <p class="p-text">
                     This journey inspired me to create Runwayscrubs, a brand that stands for something bigger than just a handbag. Our handbags are not just accessories; they are symbols of empowerment, designed to inspire confidence and ambition in women who are carving out their own paths in life.And now, with the addition of our unisex line, we proudly support everyone who believes in the movement of gender equity.
                 </p>
                 <div class="bnt-wrap">
@@ -50,7 +50,7 @@
                 <h2>Shopify excellence unleashed here</h2>
             </div>
             <div class="service-text">
-                <p>
+                <p class="p-text">
                     Codesdesk came on board looking to replatform onto Shopify Plus complete with an overhaul of their current design. We migrated them to a stunning new home with a multi-store international setup that matches up to their global reputation. Since their launch, Dockers have partnered with us for long-term success on Shopify Plus.
                 </p>
             </div>
@@ -98,7 +98,7 @@
                 <h3 class="green-text">The Results</h3>
             </div>
             <div class="service-text">
-                <p class="primery-text">
+                <p class="p-text">
                     Luxandnyx initiated discussions concerning potential partnerships and assessed the compatibility of their brand with the Shopify platform.
                 </p>
             </div>
@@ -132,7 +132,7 @@
                 <h3 class="green-text">The Solution</h3>
             </div>
             <div class="service-text">
-                <p class="primery-text">
+                <p class="p-text">
                     Our Shopify Website Solution is a comprehensive service designed to elevate your online business presence. We specialize in crafting visually appealing, user-friendly Shopify websites tailored to your brand identity. Our expert team ensures a seamless integration of essential e-commerce functionalities, from secure payment gateways to efficient inventory management
                 </p>
             </div>
@@ -151,7 +151,7 @@
                 <h3 class="green-text">The Challenge</h3>
             </div>
             <div class="service-text">
-                <p class="primery-text">
+                <p class="p-text">
                     Navigating the challenges of a Shopify website involves optimizing for user experience, staying abreast of e-commerce trends, and managing dynamic inventory demands. Overcoming customization hurdles and ensuring seamless integrations with third-party apps are crucial aspects. Our expertise lies in addressing these challenges, offering tailored solutions to enhance your Shopify website's performance and overall success.
                 </p>
             </div>
